SERVER-24808 Use const ref for MsgAssertionException